--- a/conf/user.properties
+++ b/conf/user.properties
@@ -1,6 +1,6 @@
 user.username=Mary
 user.age=17
-user.nickname=Sunny,Beauty,Grace
-user.subjects=Program,English,Math
-user.scores=100,90,80
+user.nickname=Sunny,Beauty,Grace,Sunny
+user.subjects=Program,English,Math,Program
+user.scores=100,90,80,100
 user.hobbies={'1': 'Draw', '2': 'Makeup'}
