--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,11 @@
             <version>2.6</version>
         </dependency>
         
+        <!-- MySQL -->
         <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derbyclient</artifactId>
-            <version>10.10.1.1</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
         </dependency>
         
         <dependency>
@@ -212,6 +213,8 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.1</version>
         </dependency>
+        
+        
         
     </dependencies>
   
